feat(doc): 修正Swagger文档
